--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.axelfontaine.blog</groupId>
-    <artifactId>final-nail</artifactId>
+    <groupId>b7i.de</groupId>
+    <artifactId>mvn-continious</artifactId>
     <version>0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -14,7 +14,7 @@
     </properties>
 
     <scm>
-        <connection>scm:git:https://github.com/axelfontaine/final-nail.git</connection>
+        <connection>scm:git:https://github.com/sbrosinski/final-nail.git</connection>
     </scm>
 
     <distributionManagement>
